# claude-docs-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  sync-to-hf-space.yml
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOY.md  MCP.md
docs/posts/: 2026-05-26-eval-driven-rag-tuning.md
evals/: baseline.json  golden_dataset.jsonl
scripts/: bench_search.py  check_regression.py  reset_db.py  screenshot_chat.py  screenshot_ui.py  smoke_search.py
space/: README.md
src/claude_docs_rag/: __init__.py  cli.py  models.py  settings.py
src/claude_docs_rag/agent/: client.py  pipeline.py
src/claude_docs_rag/api/: server.py
src/claude_docs_rag/evals/: runner.py
src/claude_docs_rag/ingest/: chunker.py  embedder.py  pipeline.py  scraper.py  source.py
src/claude_docs_rag/mcp/: server.py
src/claude_docs_rag/retrieval/: fusion.py  hybrid.py  hyde.py  reranker.py  sparse.py
src/claude_docs_rag/storage/: db.py  schema.py  vector_store.py
tests/: test_agent_client.py  test_agent_pipeline.py  test_api_server.py  test_chunker.py  test_eval_runner.py  test_fusion.py  test_hyde.py  test_mcp_server.py  test_smoke.py  test_source_index.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/chat/: page.tsx
