[project]
name = "claude-docs-rag"
version = "0.1.0"
description = "Production-grade RAG agent over Anthropic Claude API documentation, with hybrid retrieval, eval suite, CI regression gates and observability."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "acano" }
]
keywords = ["rag", "llm", "anthropic", "claude", "evals", "production"]

dependencies = [
    "anthropic>=0.104.0,<1.0",
    "fastapi>=0.136.0,<1.0",
    "uvicorn[standard]>=0.48.0,<1.0",
    "pydantic>=2.13.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.28.0,<1.0",
    "psycopg[binary]>=3.3.0,<4.0",
    "pgvector>=0.4.0,<1.0",
    "redis>=5.0,<7.0",
    "sentence-transformers>=5.5.0,<6.0",
    "bm25s>=0.3.9,<1.0",
    "langfuse>=4.6.0,<5.0",
    "tenacity>=9.0,<10.0",
    "rich>=14.0,<15.0",
    "typer>=0.20,<1.0",
    "beautifulsoup4>=4.13,<5.0",
    "lxml>=6.0,<7.0",
    "tiktoken>=0.10,<1.0",
    "numpy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-cov>=7.0,<8.0",
    "ruff>=0.10,<1.0",
    "mypy>=1.15,<2.0",
    "types-beautifulsoup4>=4.12,<5.0",
]

[project.scripts]
cdrag = "claude_docs_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_docs_rag"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
